--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,37 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sfdc.cucumber</groupId>
   <artifactId>SfdcCucumberFramework</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version><properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+        <groupId>net.masterthought</groupId>
+        <artifactId>maven-cucumber-reporting</artifactId>
+        <version>5.3.0</version>
+        <executions>
+        <execution>
+        <id>execution</id>
+        <phase>verify</phase>
+        <goals>
+        <goal>generate</goal>
+        </goals>
+        </execution>
+        </executions>
+        <configuration>
+                <projectName>SfdcCucumberFramework</projectName>
+                <outputDirectory>target/cucumber-reports</outputDirectory>
+                <sourceDirectory>target/cucumber-reports/cucumber.json</sourceDirectory>
+            </configuration>
+        </plugin>
+        </plugins>
+        </pluginManagement>
+        </build>
+  
   <dependencies>
   <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
