--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
   <build>
     <pluginManagement>
       <plugins>
+      <!-- Masterthought plugin --> 
+      
         <plugin>
         <groupId>net.masterthought</groupId>
         <artifactId>maven-cucumber-reporting</artifactId>
@@ -29,6 +31,20 @@
                 <sourceDirectory>target/cucumber-reports/cucumber.json</sourceDirectory>
             </configuration>
         </plugin>
+        
+        <!-- Surefire plugin -->
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.3.1</version>
+          <configuration>
+          <includes>
+          <include>**/RunnerFile.java</include>
+          </includes>
+          </configuration>
+        </plugin>
+        
+        
         </plugins>
         </pluginManagement>
         </build>
