--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
           <version>3.3.1</version>
           <configuration>
           <includes>
-          <include>**/RunnerFile.java</include>
+          <include>RunnerLogin.java</include>
           </includes>
           </configuration>
         </plugin>
