--- a/pom.xml
+++ b/pom.xml
@@ -3,51 +3,57 @@
   <groupId>com.sfdc.cucumber</groupId>
   <artifactId>SfdcCucumberFramework</artifactId>
   <version>0.0.1-SNAPSHOT</version><properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
   <build>
-    <pluginManagement>
-      <plugins>
-      <!-- Masterthought plugin --> 
-      
-        <plugin>
-        <groupId>net.masterthought</groupId>
-        <artifactId>maven-cucumber-reporting</artifactId>
-        <version>5.3.0</version>
-        <executions>
-        <execution>
-        <id>execution</id>
-        <phase>verify</phase>
-        <goals>
-        <goal>generate</goal>
-        </goals>
-        </execution>
-        </executions>
-        <configuration>
-                <projectName>SfdcCucumberFramework</projectName>
-                <outputDirectory>target/cucumber-reports</outputDirectory>
-                <sourceDirectory>target/cucumber-reports/cucumber.json</sourceDirectory>
-            </configuration>
-        </plugin>
-        
-        <!-- Surefire plugin -->
-        <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.3.1</version>
-          <configuration>
-          <includes>
-          <include>RunnerLogin.java</include>
-          </includes>
-          </configuration>
-        </plugin>
-        
-        
-        </plugins>
-        </pluginManagement>
-        </build>
+	<pluginManagement>
+		<plugins>
+			
+			<!-- Maven compiler plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+			</plugin>
+			<!-- Surefire plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
+				<configuration>
+					<includes>
+						<include>**/TestRunner*.java</include>
+					</includes>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+
+			<!-- Masterthought plugin -->
+
+			<plugin>
+				<groupId>net.masterthought</groupId>
+				<artifactId>maven-cucumber-reporting</artifactId>
+				<version>5.3.0</version>
+				<executions>
+					<execution>
+						<id>execution</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<projectName>SfdcCucumberFramework</projectName>
+					<outputDirectory>target/cucumber-reports</outputDirectory>
+					<sourceDirectory>target/cucumber-reports/cucumber.json</sourceDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</pluginManagement>
+</build>
   
   <dependencies>
   <dependency>
